add authorization with JWToken add login page add error page

--- a/Client/appsettings.json
+++ b/Client/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "secret-key-paling-sangat-ter-secret",
+    "Issuer": "API",
+    "ClientId": "PostmanTestClient",
+    "Subject": "API"
+  }
 }
